--- a/index.html
+++ b/index.html
@@ -7,38 +7,21 @@
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-	<h1 class="carousel-title">Carousel - JQuery</h1>
-	<hr>
 	<section class="container">
-		<ul id="carousel" class="carousel-wrapper">
-			<li class="img-current" id="img0" class="items visible">
-				<img src="assets/img/how-tall-is-a-tree.jpg" alt="alturas">
-			</li>		
-			<li id="img1" class="items ">
-				<img src="assets/img/hyperion-sequoia.jpg" alt="sequoia">
-			</li>
-		
-			<li id="img2" class="items ">
-				<img src="assets/img/baobab.jpg" alt="baobab">
-			</li>
-		
-			<li id="img3" class="items ">
-				<img src="assets/img/bodhi-tree.jpg" alt="arbolbodhi">
-			</li>
-	
-			<li id="img4" class="items ">
-				<img src="assets/img/mystical-angel-oak-tree.jpg" alt="roble">
-			</li>
-			<li id="img5" class="items ">
-				<img src="assets/img/magnolia-grandiflora.jpg" alt="magnolia">
-			</li>
-		</ul>
-		<!-- <span>
-			<button id="btn-before">Anterior</button>
-			<button id="btn-next">Siguiente</button>
-		</span>
- -->
-		<!-- CONTROLES -->
+	<h1 class="carousel-title">Carousel - JQuery</h1>
+	<div class="carousel-all">
+		<span class="prev">&#x276e;</span>
+		<div id="carousel" class="carousel-wrapper">
+			<img class="active" src="assets/img/how-tall-is-a-tree.jpg" alt="alturas">
+			<img src="assets/img/hyperion-sequoia.jpg" alt="sequoia">
+			<img src="assets/img/baobab.jpg" alt="baobab">
+			<img src="assets/img/bodhi-tree.jpg" alt="arbolbodhi">
+			<img src="assets/img/mystical-angel-oak-tree.jpg" alt="roble">
+			<img src="assets/img/magnolia-grandiflora.jpg" alt="magnolia">			
+		</div>
+		<span class="next">&#x276f;</span>		
+	</div>	
+	<!-- CONTROLES -->
 		<ul id="carousel-controls" class="carousel-controls">
 			
 		</ul>
